# LiveStudio

./: .gitignore  README.md  main.py  pyproject.toml
.claude/: settings.local.json
.claude/plans/: controller-config-cleanup.md  tts-engine-fish-audio.md  tts-playback-sink-step1.md
config/: vtube_studio.yaml
doccs/: event.md  permissions.md  vtubestudio api.md
examples/: flet_all_controls_demo.py
livestudio/: __init__.py  log.py
livestudio/app/: __init__.py  base.py  vtubestudio.py
livestudio/clients/: __init__.py
livestudio/config/: __init__.py  errors.py  (+4 more)
scripts/: inspect_discovery.py  mcp_multi_queue_emotions_test.py  probe_discovery.py  verify_expression_v3.py
tests/: conftest.py  mcp_fakes.py  test_animation_runtime.py  test_async_utils.py  test_audio_playback_sink.py  test_audio_stream_source.py  test_config_manager.py  test_config_manager_extended.py  test_easing.py  test_expression.py  test_expression_builtin_units.py  test_expression_defaults.py  test_expression_integration.py  test_expression_system.py  test_fish_audio_cancel.py  test_fish_audio_engine.py  test_gui_audio_logs.py  test_gui_bridge.py  test_gui_collapsible_and_expression_editor.py  test_gui_config_editor.py  test_gui_dashboard.py  test_gui_framework.py  test_gui_toaster.py  test_lifecycle.py  test_main_au_cli.py  test_mcp_server.py  test_mcp_shutdown.py  test_mcp_toolset.py  test_paths.py  test_performance_timeline.py  test_platform_base.py  test_platform_model_config.py  test_platform_state_events.py  test_refactor_lifecycle.py  test_save_model_config.py  test_semantic_actions.py  test_semantic_controllers.py  test_semantic_templates.py  test_speak_delegation.py  test_subtitle_service.py  (+11 more)
(+266 files in other folders)
